0.9.6 -> 0.9.7 (r3493-r3xxx)

General/Core:
 bug: return Z1 and Z2 from TSC (fixes some touch logic)
 bug: fix a ton of old, broken cpu opcodes and CP15 logic
 enh: substantial improvements to wifi emulation
 
Graphics:

Windows:

Linux/OSX:

0.9.5 -> 0.9.6 (r3075-r3493)

Users of gtk, cli and gtk-glade frontends please note that now we
have a common directory in ~/.config/desmume for config file,
saves and savestates. The old .desmume.ini will be moved
automatically with the name config but you have to move your saves
manually.

Some save files may be invalidated due to use of broken crc logic.
Back up your DSV files before using this version of the emulator or else
the game might wipe it.

General/Core:
 bug: emulate keypad interrupt
 bug: spu overhaul, add capture support
 bug: fix dma address reloading
 bug: fix rom close memory corruption
 bug: fix div and sqrt busy flag bug
 bug: fix vectest
 bug: fix lid savestate desync
 bug: fix texcache memory GB explosion when games use tons of tiny 3d sprites
 bug: fix huge rerecording movie file handle leak
 bug: fix EXXXXXXX cheat codes and some add/edit/save/load bugs
 bug: add 8MBit - 512MBit flash emulation
 bug: fix firmware booted-from-card flag
 bug: fix some failures to wake
 bug: fix some rtc calendar logic
 bug: op_bkpt emulation
 bug: correctly emulate POWCNT1 and POWCNT2 and SPI power device
 bug: corrections to bootup stack configuration
 bug: protect bios from being overwritten
 bug: initialize save data to 0xFF instead of 0x00
 bug: handle relocated irq vectors
 bug: support patched firmwares
 bug: handle 8bit auxspidata, 32bit BLDY, 32bit div regs
 bug: fix some divide by zero cases
 bug: don't print \n in ideas debug message
 bug: don't let games read off end of cart and crash emulator
 bug: fix SWI 0x0E crc16 ; some save files using wrong crc may be invalidated
 bug: fix many big endian bugs
 bug: fix CPSR.I idle wakeup
 bug: fix loadstate crashes, mostly when sound is enabled